# gamescope

./: README.md  meson.build  meson_options.txt
.github/workflows/: main.yml
layer/: VkLayer_FROG_gamescope_wsi.cpp
src/: backend.h  drm.cpp  headless.cpp  meson.build  sdlwindow.cpp  setcap.sh  steamcompmgr.cpp  version.hpp.in  vr_session.cpp  wayland_backend.cpp
