option('pipewire', type: 'feature', description: 'Screen capture via PipeWire')
option('enable_gamescope',           type : 'boolean', value : true, description: 'Build Gamescope executable')
option('enable_gamescope_wsi_layer', type : 'boolean', value : true, description: 'Build Gamescope layer')
option('enable_openvr_support',      type : 'boolean', value : true, description: 'OpenVR Integrations')
option('install_setcap',             type : 'boolean', value : false, description: 'Set CAP_SYS_NICE on installed binary')
